advance: ops calculte ready, with the percentages on graph and height of the graph, and include an animate svg, to ops loading

--- a/src/components/graph-side/graph-side.css
+++ b/src/components/graph-side/graph-side.css
@@ -11,6 +11,9 @@
 .graph-side svg{
     transform: rotate(180deg);
 }
+.graph-side svg rect{
+    transition: height 0.5s;
+}
 .graph-side .numbers{
     width: 300px;
     margin-top: 20px;
