--- a/src/components/graph-side/graph-side.css
+++ b/src/components/graph-side/graph-side.css
@@ -31,7 +31,7 @@
     align-items: center;
     justify-content: center;
 }
-.graph-side button div::after{
+.graph-side .terminal div::after{
     position: absolute;
     display: block;
     content: '1';
@@ -62,7 +62,7 @@
     width: 300px;
     height: 350px;
     z-index: 11;
-    display: flex;
+    display: none;
     flex-direction: column;
     align-items: center;
     gap: 15px;
