--- a/src/components/graph-side/graph-side.css
+++ b/src/components/graph-side/graph-side.css
@@ -54,20 +54,34 @@
 }
 
 .graph-side .history-modal{
+    box-shadow: none;
+    border: none;
+    background: none;
+    border-radius: none;
+    width: 0px;
+    height: 0px;
+    z-index: 11;
+    gap: 0;
+    padding: 0px;
+    position: absolute;
+    transition: all .5s;
+}
+.graph-side .history-open{
+    width: 300px;
+    height: 350px;
     box-shadow: 0 0 5px 0 var(--primary-color);
     border: var(--primary-color) 2px solid;
     background: var(--third-color);
     border-radius: 20px;
-    position: absolute;
-    width: 300px;
-    height: 350px;
     z-index: 11;
-    display: none;
+    display: flex;
     flex-direction: column;
     align-items: center;
     gap: 15px;
     padding: 10px;
+    position: absolute;
 }
+
 .graph-side .history-modal .search-input{
     width: 100%;
     height: 70px;
@@ -128,6 +142,7 @@
     position: absolute;
     cursor: pointer;
     right: 0;
+    top: 9px;
 }
 
 .graph-side .numbers{
@@ -161,4 +176,11 @@
     height: 20px;
     border-radius: 100%;
     background: #fff2;
+}
+
+.graph-side .history-modal *{
+    display: none;
+}
+.graph-side .history-open *{
+    display: block;
 }
