--- a/src/components/graph-side/graph-side.css
+++ b/src/components/graph-side/graph-side.css
@@ -33,7 +33,6 @@
 }
 .graph-side .terminal div::after{
     position: absolute;
-    display: block;
     content: '1';
     top: -8px;
     right: -8px;
@@ -53,7 +52,8 @@
     z-index: 10;
 }
 
-.graph-side .history-modal{
+.graph-side .history-modal, 
+.graph-side .terminal-modal{
     box-shadow: none;
     border: none;
     background: none;
@@ -66,7 +66,8 @@
     position: absolute;
     transition: all .5s;
 }
-.graph-side .history-open{
+.graph-side .history-open, 
+.graph-side .terminal-open{
     width: 300px;
     height: 350px;
     box-shadow: 0 0 5px 0 var(--primary-color);
@@ -81,7 +82,9 @@
     padding: 10px;
     position: absolute;
 }
-
+.graph-side .terminal-modal *{
+    white-space: pre-wrap;
+}
 .graph-side .history-modal .search-input{
     width: 100%;
     height: 70px;
@@ -182,5 +185,11 @@
     display: none;
 }
 .graph-side .history-open *{
+    display: block;
+}
+.graph-side .terminal-modal *{
+    display: none;
+}
+.graph-side .terminal-open *{
     display: block;
 }
