--- a/src/components/graph-side/graph-side.css
+++ b/src/components/graph-side/graph-side.css
@@ -7,7 +7,6 @@
     justify-content: center;
     background: var(--graph-side-color);
     padding: 50px;
-    --number-terminal-display: block; 
 }
 .graph-side .graph-svg{
     transform: rotate(180deg);
@@ -34,7 +33,6 @@
 }
 .graph-side .terminal div{
     position: absolute;
-    display: var(--number-terminal-display);
     top: -4px;
     right: -4px;
     width: 17px;
@@ -86,6 +84,15 @@
 .graph-side .terminal-modal{
     overflow-y: auto;
     scrollbar-color: var(--primary-color) transparent;
+    font-size: 1.1rem;
+    padding: 70px 10px 10px 10px ;
+}
+.graph-side .terminal-modal button{
+    position: absolute;
+    top: 0;
+    right: 0;
+    margin: 10px;
+    border-radius: 10px;
 }
 .graph-side .terminal-modal *{
     white-space: pre-wrap;
