--- a/src/components/code-side/code-side.css
+++ b/src/components/code-side/code-side.css
@@ -27,6 +27,10 @@
     margin-top: 20px;
     gap: 20px;
 }
+.code-side .Globals .code{
+    overflow-x: auto;
+    scrollbar-color: var(--primary-color) transparent;
+}
 .code-side .Globals .controls{
     display: flex;
     margin-left: auto;
@@ -52,7 +56,7 @@
     flex-grow: 1;
     display: flex;
     flex-direction: column;
-    overflow-y: auto;
+    overflow-x: auto;
     scrollbar-color: var(--primary-color) transparent;
 }
 .code-side .test-cases::-webkit-scrollbar-button{
